fix news image & login visibility

--- a/src/pages/News/news.module.css
+++ b/src/pages/News/news.module.css
@@ -41,4 +41,10 @@
 
 .userInfoPhoto{
   margin-right: 5%;
+  background-size: cover;
+  background-position: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
+
